--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@ layout: default
 
 <div class="home">
 
-<p><img src="/img/abolycover.png" alt="aboly cover" width="360px" style="display: block; margin: 0px auto"/></p>
+<p><a href="https://github.com/abolybook/aboly/releases"><img src="/img/abolycover.png" alt="aboly cover" width="360px" style="display: block; margin: 0px auto"/></a></p>
 
 <p style="text-align: center">
-PDF电子书下载：<br>
+PDF 电子书下载：<br>
 <a href="https://github.com/abolybook/aboly/releases">github.com/abolybook/aboly/releases</a>
 </p>
 
 <p style="text-align: center">
-百度网盘备份：<br>
+百度网盘备份（国内访问较快）：<br>
 <a href="http://pan.baidu.com/s/1eRp6vMq">pan.baidu.com/s/1eRp6vMq</a>
+</p>
+
+<p style="text-align: center">
+新浪微博：<a href="http://weibo.com/abolybook">weibo.com/abolybook</a><br>
+微信订阅号：abolybook
 </p>
 
 <p style="text-align: center">
