--- a/aboly.html
+++ b/aboly.html
@@ -13638,7 +13638,7 @@ img.characterimg {
 <p>
 <a id="sourcecode"></a>本书用LaTeX撰写，经过简单的Python处理，编译成PDF电子书，可以从<a href="https://github.com/abolybook/aboly/releases/latest" class="lyurl" target="_blank">GitHub</a>或<a href="http://pan.baidu.com/s/1eRp6vMq#path=%252Faboly" class="lyurl" target="_blank">百度网盘</a>下载。Web版的生成，先用<a href="http://www.antlr.org/" class="lyurl" target="_blank">ANTLR</a>从LaTeX转换为XML，再用XSLT导出HTML。如果你是Windows XP用户，建议安装<a href="http://www.firefox.com.cn" class="lyurl" target="_blank">Firefox</a>等支持Web标准较好的浏览器阅读。</p>
 <p>
-<a id="projectinfo"></a>本书基于&ldquo;知识共享&rdquo;协议<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/cn/" class="lyurl" target="_blank">CC BY-NC-ND 3.0</a>，以开放源代码的形式发布在GitHub上：<a href="https://github.com/abolybook/aboly" class="lyurladdr" target="_blank">github.com/abolybook/aboly</a>，欢迎通过<a href="https://github.com/abolybook/aboly/issues" class="lyurl" target="_blank">Issues</a>和<a href="https://github.com/abolybook/aboly/pulls" class="lyurl" target="_blank">Pull Requests</a>提出问题和建议。</p>
+<a id="projectinfo"></a>本书基于&ldquo;知识共享&rdquo;协议<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/cn/" class="lyurl" target="_blank">CC BY-NC-ND 3.0</a>，以开放源代码的形式发布在GitHub上：<a href="https://github.com/abolybook/aboly" class="lyurladdr" target="_blank">github.com/abolybook/aboly</a>，欢迎通过<a href="https://github.com/abolybook/aboly/issues" class="lyurl" target="_blank">Issues</a>或<a href="https://github.com/abolybook/aboly/pulls" class="lyurl" target="_blank">Pull Requests</a>提出问题和建议。</p>
 <p>其它联系方式：</p>
 <ul>
 <li>
