--- a/aboly.html
+++ b/aboly.html
@@ -537,7 +537,7 @@ img.characterimg {
 <a id="daren"></a>&ldquo;君子&rdquo;最早见于《<a href="#shangshu">尚书</a>》的《虞夏书&middot;大禹谟》（伪）、《周书&middot;酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，&ldquo;<a href="#jun1">君</a>之子&rdquo;出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的实际情况。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>&middot;魏风&middot;伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span>
 </p>
 <p>
-<a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予&ldquo;君子&rdquo;的新内涵。孔子创建的私学，开辟了平民通往君子之路。说、乐与君子并列，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
+<a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予&ldquo;君子&rdquo;的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并列，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
 </ul>
 </div>
@@ -785,7 +785,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="dizi"></a><span class="lyterm">弟子</span>：做弟弟的和做孩子的，泛指年纪幼小的人，少年儿童。</p>
+<a id="dizi"></a><span class="lyterm">弟子</span>：做弟弟的和做孩子的，后生晚辈。这里主要指年纪幼小的人，少年儿童。&ldquo;弟子&rdquo;更常见的含义是<a href="#menren">学生</a>，晚辈的含义后来多用&ldquo;子弟&rdquo;表示。</p>
 </li>
 <li>
 <p>
@@ -1408,7 +1408,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">弟子</span>：因为这里是问孝，所以偏指做孩子的，子侄辈。可以和 <a href="#1.6" class="lyref">1.6</a>  比较。</p>
+<span class="lyterm"><a href="#dizi">弟子</a></span>：因为这里是问孝，所以偏指做孩子的，子侄辈。</p>
 </li>
 <li>
 <p>
@@ -1816,11 +1816,11 @@ img.characterimg {
 <p>
 <a id="shangchao"></a><span class="lyterm">殷</span>（约前1600年&mdash;前1046年）：即商朝，子姓，由<a href="#tang">汤</a>伐桀推翻<a href="#xiachao">夏朝</a>后建立，末代君王是著名的暴君<a href="#zhou">纣</a>。据《史记&middot;殷本纪》，商王室的始祖契（<span class="lypinyin">xi&egrave;</span>）被<a href="#shun">舜帝</a>封于商（在今河南省商丘市），就取地名为国号。《帝王世纪&middot;殷商》载：<span class="lyq">帝盘庚徙都殷，始改商曰殷。</span>盘庚迁都约在前1300年，殷墟在今河南省安阳市，此后一直是商的都城。<a id="zhaoge"></a><a href="#zhou">纣王</a>常驻的陪都<a id="zhaoge"></a>朝（<span class="lypinyin">zhāo</span>）歌，在今河南省鹤壁市淇县。商朝的甲骨文和金文，是中国最早的文字系统。</p>
 <p>
-<a id="zhouchao"></a><span class="lyterm">周</span>（前1046年&mdash;前256年）：即周朝，姬姓，由<a href="#wu">武王</a>伐<a href="#zhou">纣</a>推翻<a href="#shangchao">商朝</a>后建立。前771年，<a href="#lixuanyouping">周平王</a>不堪<a href="#yidihuaxia">犬戎</a><a href="#zhouyouwang">侵扰</a>，将都城由镐（<span class="lypinyin">h&agrave;o</span>）京（即西都<span class="lykeyword">宗周</span>，在今陕西省西安市）东迁至<a id="luoyi"></a>洛邑（即东都<span class="lykeyword">成周</span>，在今河南省洛阳市，较接近殷遗民之地），周朝以此为先后，分为<span class="lykeyword">西周</span>和<span class="lykeyword">东周</span>，开启了周室衰落、诸侯争<a href="#badao">霸</a>的序幕。后代史家又将东周分为<span class="lykeyword">春秋</span>时期和<span class="lykeyword">战国</span>时期，分法并不统一，如以<a href="#sanjiafenjin">三家分晋</a>（前453年或前403年）为界，标志着各国之间征伐兼并、各国内部君臣权贵争斗厮杀的白热化。从西周<a href="#zhoushaogonghe">共和元年</a>（前841年）起，中国历史有了连续性的同期文字记录，进入信史时代。</p>
+<a id="zhouchao"></a><span class="lyterm">周</span>（前1046年&mdash;前256年）：即周朝，姬姓，由<a href="#wu">武王</a>伐<a href="#zhou">纣</a>推翻<a href="#shangchao">商朝</a>后建立。前771年，<a href="#lixuanyouping">周平王</a>不堪<a href="#yidihuaxia">犬戎</a><a href="#zhouyouwang">侵扰</a>，将都城由镐（<span class="lypinyin">h&agrave;o</span>）京（即西都<span class="lykeyword">宗周</span>，在今陕西省西安市）东迁至<a id="luoyi"></a>洛邑（即东都<span class="lykeyword">成周</span>，在今河南省洛阳市，较接近殷遗民之地）。周朝以此为先后，分为<span class="lykeyword">西周</span>和<span class="lykeyword">东周</span>，开启了周室衰落、诸侯争<a href="#badao">霸</a>的序幕。后代史家又将东周分为<span class="lykeyword">春秋</span>时期和<span class="lykeyword">战国</span>时期，分法并不统一，如以<a href="#sanjiafenjin">三家分晋</a>（前453年或前403年）为界，标志着各国之间征伐兼并、各国内部君臣权贵争斗厮杀的白热化。从西周<a href="#zhoushaogonghe">共和元年</a>（前841年）起，中国历史有了连贯的同期文字记录，进入信史时代。</p>
 <p>
-<a id="wangji"></a>王朝首都周边由君王直接管辖的区域，称为<span class="lykeyword">王畿</span>（<span class="lypinyin">jī</span>）。西周的王畿在镐京至洛邑一带，方圆约千里，东迁后大为缩减。商朝和周朝实行<span class="lykeyword">分封制</span>，由君王将王畿以外的土地分封给诸侯，授以爵位，建立相对独立自治的国家。<a id="xizhouguo"></a>前440年，周考王封其弟于王畿，这个小国称为<span class="lykeyword">西周国</span>，国君称西周公（或西周<a href="#jun1">君</a>，和<a href="#zhougong">周公</a>不是一回事）。前367年由于内乱，又从西周国里分裂出<span class="lykeyword">东周国</span>。战国末期，秦国独大，前256年，西周国联合诸侯攻秦，反遭秦吞并，尽丧其36 <a href="#yi4c">邑</a>及周王室九鼎，西周公和周朝末代君王周赧王于同年去世，周朝灭亡。前249年，东周国同样伐秦失败而灭国。<a id="qintongyitianxia"></a>前221年，秦完成了对其它诸侯国的吞并，统一天下，随后取消分封，设立郡县，分派官员统一管理，开创了<span class="lykeyword">中央集权制</span>的时代。</p>
+<a id="wangji"></a>王朝首都周边由君王直接管辖的区域，称为<span class="lykeyword">王畿</span>（<span class="lypinyin">jī</span>）。西周的王畿在镐京至洛邑一带，方圆约千里，东迁后大为缩减。商朝和周朝实行<span class="lykeyword">分封制</span>，由君王将王畿以外的土地分封给诸侯，授以爵位，建立相对独立自治的国家。<a id="xizhouguo"></a>前440年，周考王封其弟于王畿，这个小国称为<span class="lykeyword">西周国</span>，国君称西周公（或西周<a href="#jun1">君</a>，和<a href="#zhougong">周公</a>不是一回事）。前367年由于内乱，又从西周国里分裂出<span class="lykeyword">东周国</span>。战国末期，秦国独大，前256年，西周国联合诸侯攻秦，反遭秦吞并，尽丧其36 <a href="#yi4c">邑</a>及周王室九鼎，西周公和周朝末代君王周赧王均于同年去世，周朝灭亡。前249年，东周国同样伐秦失败而遭灭国。<a id="qintongyitianxia"></a>前221年，秦完成了对其它诸侯国的侵吞，统一天下，随后取消分封，设立郡县，由朝廷选派官员统一管理，开创了<span class="lykeyword">中央集权制</span>的时代。</p>
 <p>
-<a id="sandai"></a>夏、商、周合称<span class="lykeyword">三代</span>，被儒家视为盛世的象征。东周时所称的三代只包含到西周，如 <a href="#15.25" class="lyref">15.25</a> ，秦朝以后，才将整个周朝都算在内。周朝由盛转衰的显著标志是平王东迁，天子之权从此操弄于诸侯之手。如乾隆为《贞观政要》作的序言所说：<span class="lyq">夫三代以上，君明臣良，天下雍熙，世登上理。自东迁以降，风俗日薄，天下无复熙皞之美。</span>（雍：和谐。熙：兴盛。熙皞（<span class="lypinyin">h&agrave;o</span>）：和乐。）</p>
+<a id="sandai"></a>夏、商、周合称<span class="lykeyword">三代</span>，被儒家视为盛世的象征。东周时所称的三代只包含到西周，如 <a href="#15.25" class="lyref">15.25</a> ，秦朝以后，才将整个周朝都算在内。周朝由盛转衰的标志是平王东迁，天子之权从此操弄于诸侯之手。如清代乾隆帝为《贞观政要》作的序言中说：<span class="lyq">夫三代以上，君明臣良，天下雍熙，世登上理。自东迁以降，风俗日<a href="#tou1a">薄</a>，天下无复熙皞之美。</span>（雍：和谐。熙：兴盛。熙皞（<span class="lypinyin">h&agrave;o</span>）：和乐。）</p>
 </li>
 <li>
 <p>
@@ -5534,7 +5534,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">偷</span>：薄，不厚道。<span class="lyexample"><span>【例】</span><span>《后汉书&middot;廉范传》：<span class="lyq">其俗尚文辩，好相持短长，范每厉以淳厚，不受偷薄之说。</span>（厉：通&ldquo;励&rdquo;。）</span></span>
+<a id="tou1a"></a><span class="lyterm">偷</span>：薄，不厚道。<span class="lyexample"><span>【例】</span><span>《后汉书&middot;廉范传》：<span class="lyq">其俗尚文辩，好相持短长，范每厉以淳厚，不受偷薄之说。</span>（厉：通&ldquo;励&rdquo;。）</span></span>
 </p>
 </li>
 </ul>
@@ -7583,7 +7583,7 @@ img.characterimg {
 <div class="lyblob">
 <div class="lyblobtag">11.4</div>
 <div class="lybloboriginaltext">
-<p>子曰：&ldquo;<a href="#yanhui">回</a>也非助我者也，于吾言无所不说。&rdquo;</p>
+<p>子曰：&ldquo;<a href="#yanhui">回</a>也非助我者也！于吾言无所不说。&rdquo;</p>
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
@@ -9522,7 +9522,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">劳</span>：使动用法，使勤勉。本章讲的是为了<a href="#dizi">弟子</a>、君上好，所应有的态度。<span class="lyseealso"><span>【参】</span><span>《战国策&middot;赵策》的名篇《触龙说<a href="#zhaoweihou">赵太后</a>》中，太后不舍得让幼子长安君入齐为质，老臣触龙委婉进谏：<span class="lyq">父母之爱子，则为之计深远。&hellip;&hellip;尊长安君之位，而封之以膏腴之地，多予之<a href="#zhongqi">重器</a>，而不及今令有功于国。一旦山陵崩，长安君何以自托于赵？</span>（山陵崩：赵太后故去的委婉说法。）这是建功立业的&ldquo;劳&rdquo;。生活中吃苦流汗的&ldquo;劳&rdquo;也有益身心，如《明实录&middot;太祖实录&middot;卷二十七》载，1367年末朱元璋刚刚登基，就<span class="lyq">以诸子年渐长，宜习勤劳，使不骄惰，命内侍制麻<a href="#ju4a">屦</a>行幐，凡出城稍远，则令马行其二，步趋其一。</span>（幐（<span class="lypinyin">t&eacute;ng</span>）：囊。）</span></span>
+<span class="lyterm">劳</span>：使动用法，使勤勉。本章讲的是为了<a href="#dizi">子弟</a>、君上好，所应持的态度。<span class="lyseealso"><span>【参】</span><span>《战国策&middot;赵策》的名篇《触龙说<a href="#zhaoweihou">赵太后</a>》中，太后不舍得让幼子长安君入齐为质，老臣触龙委婉进谏：<span class="lyq">父母之爱子，则为之计深远。&hellip;&hellip;尊长安君之位，而封之以膏腴之地，多予之<a href="#zhongqi">重器</a>，而不及今令有功于国。一旦山陵崩，长安君何以自托于赵？</span>（山陵崩：赵太后故去的委婉说法。）这是建功立业的&ldquo;劳&rdquo;。生活中吃苦流汗的&ldquo;劳&rdquo;也有益身心，如《明实录&middot;太祖实录&middot;卷二十七》载，1367年末朱元璋刚刚登基，就<span class="lyq">以诸子年渐长，宜习勤劳，使不骄惰，命内侍制麻<a href="#ju4a">屦</a>行幐，凡出城稍远，则令马行其二，步趋其一。</span>（幐（<span class="lypinyin">t&eacute;ng</span>）：囊。）</span></span>
 </p>
 </li>
 </ul>
@@ -10466,7 +10466,7 @@ img.characterimg {
 <div class="lybloboriginaltext">
 <p>子曰：&ldquo;<a href="#zigong">赐</a>也，女以予为多学而识之者与？&rdquo;</p>
 <p>对曰：&ldquo;然，非与？&rdquo;</p>
-<p>曰：&ldquo;非也，予一以贯之。&rdquo;</p>
+<p>曰：&ldquo;非也。予一以贯之。&rdquo;</p>
 </div>
 <div class="lyblobannotation">
 <p>
@@ -13643,7 +13643,7 @@ img.characterimg {
 <p>
 <a id="sourcecode"></a>本书用LaTeX撰写，经过简单的Python处理，编译成PDF电子书，可以从<a href="https://github.com/abolybook/aboly/releases/latest" class="lyurl" target="_blank">GitHub</a>或<a href="http://pan.baidu.com/s/1eRp6vMq#path=%252Faboly" class="lyurl" target="_blank">百度网盘</a>下载。Web版的生成，先用<a href="http://www.antlr.org/" class="lyurl" target="_blank">ANTLR</a>从LaTeX转换为XML，再用XSLT导出HTML。如果你是Windows XP用户，建议安装<a href="http://www.firefox.com.cn" class="lyurl" target="_blank">Firefox</a>等支持Web标准较好的浏览器阅读。</p>
 <p>
-<a id="projectinfo"></a>本书基于&ldquo;知识共享&rdquo;协议<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/cn/" class="lyurl" target="_blank">CC BY-NC-ND 3.0</a>，以开放源代码的形式发布在GitHub上：<a href="https://github.com/abolybook/aboly" class="lyurladdr" target="_blank">github.com/abolybook/aboly</a>，欢迎通过<a href="https://github.com/abolybook/aboly/issues" class="lyurl" target="_blank">Issues</a>或<a href="https://github.com/abolybook/aboly/pulls" class="lyurl" target="_blank">Pull Requests</a>提出问题和建议。</p>
+<a id="projectinfo"></a>本书基于&ldquo;知识共享&rdquo;协议<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/cn/" class="lyurl" target="_blank">CC BY-NC-ND 3.0</a>，以开放源代码的形式发布在GitHub上：<a href="https://github.com/abolybook/aboly" class="lyurladdr" target="_blank">github.com/abolybook/aboly</a>，欢迎通过<a href="https://github.com/abolybook/aboly/issues" class="lyurl" target="_blank">Issues</a>、<a href="https://github.com/abolybook/aboly/pulls" class="lyurl" target="_blank">Pull Requests</a>提出问题和建议。</p>
 <p>其它联系方式：</p>
 <ul>
 <li>
