--- a/ly.html
+++ b/ly.html
@@ -2323,7 +2323,7 @@ a:link {
 <div class="lyblob">
 <div class="lyblobtag">11.4</div>
 <div class="lytext">
-<p>子曰：&ldquo;回也非助我者也，于吾言无所不说。&rdquo;</p>
+<p>子曰：&ldquo;回也非助我者也！于吾言无所不说。&rdquo;</p>
 </div>
 </div>
 <a id="11.5"></a>
@@ -3255,7 +3255,7 @@ a:link {
 <div class="lytext">
 <p>子曰：&ldquo;赐也，女以予为多学而识之者与？&rdquo;</p>
 <p>对曰：&ldquo;然，非与？&rdquo;</p>
-<p>曰：&ldquo;非也，予一以贯之。&rdquo;</p>
+<p>曰：&ldquo;非也。予一以贯之。&rdquo;</p>
 </div>
 </div>
 <a id="15.4"></a>
