--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: default
 <div class="home">
 
 <div style="overflow: auto; width: 100%; margin-bottom: 1.5em;">
-<a href="/aboly/" title="《一瓶论语》"><img src="/img/abolycover.png" alt="《一瓶论语》" width="48%" style="display: block; float: left"/></a>
-<a href="/ly/" title="《论语》白文版"><img src="/img/lycover.png" alt="《论语》白文版" width="48%" style="display: block; float: right"/></a>
+<a href="/aboly" title="《一瓶论语》"><img src="/img/abolycover.png" alt="《一瓶论语》" width="48%" style="display: block; float: left"/></a>
+<a href="/ly" title="《论语》白文版"><img src="/img/lycover.png" alt="《论语》白文版" width="48%" style="display: block; float: right"/></a>
 </div>
 
-<p style="text-align: center">:star: 2016-6-18，Web版上线啦！<a href="/web-edition/">详情……</a></p>
+<p style="text-align: center">:star: 2016-6-18，Web版上线啦！<a href="/web-edition">详情……</a></p>
 
 <p style="text-align: center">
 PDF版下载：<a href="https://github.com/abolybook/aboly/releases" target="_blank">github.com/abolybook/aboly/releases</a>
