--- a/ly.html
+++ b/ly.html
@@ -1,6 +1,6 @@
 ---
 layout: empty
-permalink: /ly/
+permalink: /ly
 ---
 
 <!DOCTYPE html>
@@ -232,7 +232,6 @@ a:link {
         location.hash = randomPick();
     }
 
-
     // Outline menu.
     var outlineMenu = '<li><a href="#1">1. 学而<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#2">2. 为政<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#3">3. 八佾<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#4">4. 里仁<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#5">5. 公冶长<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#6">6. 雍也<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#7">7. 述而<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#8">8. 泰伯<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#9">9. 子罕<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#10">10. 乡党<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#11">11. 先进<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#12">12. 颜渊<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#13">13. 子路<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#14">14. 宪问<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#15">15. 卫灵公<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#16">16. 季氏<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#17">17. 阳货<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#18">18. 微子<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#19">19. 子张<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li><li><a href="#20">20. 尧曰<span class="glyphicon glyphicon-chevron-down lyoutlinemenuchevron"></span></a></li>';
 
@@ -277,7 +276,6 @@ a:link {
         return false;
     }
 
-
     // Toggle blob tags.
     var showClass = "glyphicon-ok";
     var hideClass = "glyphicon-remove";
@@ -299,7 +297,6 @@ a:link {
             shown ? $(this).hide() : $(this).show();
         });
     }
-
 
     // onload.
     $(function() {
@@ -338,10 +335,10 @@ a:link {
 <a href="http://pan.baidu.com/s/1eRp6vMq" target="_blank"><span class="glyphicon glyphicon-download-alt"></span> PDF版</a>
 </li>
 <li>
-<a href="http://www.abolybook.org/" target="_blank"><span class="glyphicon glyphicon-home"></span> 主页</a>
+<a href="http://www.abolybook.org" target="_blank"><span class="glyphicon glyphicon-home"></span> 主页</a>
 </li>
 <li>
-<a href="/donate/" target="_blank"><span class="glyphicon glyphicon-heart"></span> 赞助</a>
+<a href="/donate" target="_blank"><span class="glyphicon glyphicon-heart"></span> 赞助</a>
 </li>
 </ul>
 </li>
