Fix blobtag's display in print view.

--- a/aboly.html
+++ b/aboly.html
@@ -267,6 +267,10 @@ img.characterimg {
         padding: 2em;
         width: 80%;
     }
+
+    div.lyblobtag > a[href]:after {
+        content: "";
+    }
 }
 </style>
 <script src="http://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
