--- a/ly.html
+++ b/ly.html
@@ -138,6 +138,10 @@ a:link {
         padding: 2em;
         width: 80%;
     }
+
+    div.lyblobtag > a[href]:after {
+        content: "";
+    }
 }
 </style>
 <script src="http://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
