Temporarily remove Sina Blog and WeChat contact info. Interesting stuff will be posted on this site (http://www.abolybook.org).

--- a/aboly.html
+++ b/aboly.html
@@ -1241,7 +1241,7 @@ img.characterimg {
 <p>
 <a id="fajia"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子&middot;任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。&hellip;&hellip;君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰&ldquo;法&rdquo;。&hellip;&hellip;君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书&middot;开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子&middot;难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，&hellip;&hellip;吾所以为言势者，中也。&hellip;&hellip;抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span>
 </p>
-<p>《大戴礼记&middot;礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。&ldquo;法禁于已然之后&rdquo;的观念，可能也造成中国百姓的日常法律意识淡薄，违法就自认倒霉。）《后汉书&middot;陈宠传》引陈宠上疏：<span class="lyq">礼之所去，刑之所取，失礼则入刑，相为表里者也。</span>（礼法之功，为自律他律。）《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教，用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）<a href="#2.3" class="lyref">2.3</a>  对法治与德治的效果进行了比较。</p>
+<p>《大戴礼记&middot;礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。&ldquo;法禁于已然之后&rdquo;的观念，可能也造成中国百姓的日常法律意识淡薄，违法就自认倒霉。）《后汉书&middot;陈宠传》引陈宠上疏：<span class="lyq">礼之所去，刑之所取，失礼则入刑，相为表里者也。</span>（礼法之功效，在于自律他律。）《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教，用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）<a href="#2.3" class="lyref">2.3</a>  对法治与德治的效果进行了比较。</p>
 </div>
 </li>
 <li>
@@ -2746,7 +2746,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">吾何以观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里带有堪称一景、值得一瞧的意思，近似于现代汉语的&ldquo;可观&rdquo;。</p>
+<span class="lyterm">吾何以观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里带有堪称一景、值得一瞧的意思，可以比较现代汉语的&ldquo;可观&rdquo;。</p>
 </li>
 </ul>
 </div>
@@ -4242,7 +4242,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">周</span>：救济，补贴不足。<span class="lyterm">继</span>：增加，接续。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;疏广传》载，疏广作为汉宣帝的太子太傅告老退休时，宣帝<span class="lyq">加赐黄金二十斤，皇太子赠以五十斤</span>。疏广回乡后，每日宴请<span class="lyq">族人故旧宾客</span>，散财唯恐不快。有劝其多为子孙置买田宅产业，<span class="lyq">广曰：&ldquo;吾岂老悖不念子孙哉？顾自有旧田庐，令子孙勤力其中，足以共衣食，与凡人齐。今复增益之以为赢余，但教子孙怠惰耳。贤而多财则损其志，愚而多财则益其过。且夫富者，众人之怨也；吾既亡以教化子孙，不欲益其过而生怨。&rdquo;</span>而在现代，公益基金会是善用余财回报社会的典型方式，可以参考资中筠著《财富的归宿：美国现代公益基金会述评》。</span></span>
+<span class="lyterm">周</span>：救济，补贴不足。<span class="lyterm">继</span>：增加，接续。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;疏广传》载，疏广作为汉宣帝的太子太傅告老退休时，宣帝<span class="lyq">加赐黄金二十斤，皇太子赠以五十斤</span>。疏广回乡后，每日宴请<span class="lyq">族人故旧宾客</span>，散财唯恐不快。有劝其多为子孙置买田宅产业，<span class="lyq">广曰：&ldquo;吾岂老悖不念子孙哉？顾自有旧田庐，令子孙勤力其中，足以共衣食，与凡人齐。今复增益之以为赢余，但教子孙怠惰耳。贤而多财则损其志，愚而多财则益其过。且夫富者，众人之怨也；吾既亡以教化子孙，不欲益其过而生怨。&rdquo;</span>在现代，公益基金会是善用余财回报社会的典型方式，可以参考资中筠著《财富的归宿：美国现代公益基金会述评》。</span></span>
 </p>
 </li>
 </ul>
@@ -11236,7 +11236,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">固穷</span>：在困境中保持意志坚定。<span class="lyterm">固</span>：安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语&ldquo;穷途末路&rdquo;。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.9" class="lyref">4.9</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（厄：困苦。悯：忧伤。）<a id="qiongda"></a>《孟子&middot;尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span>
+<span class="lyterm">固穷</span>：在困境中保持意志坚定。<span class="lyterm">固</span>：安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语&ldquo;穷途末路&rdquo;。<a id="qiongda"></a>《孟子&middot;尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.9" class="lyref">4.9</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（厄：困苦。悯：忧伤。）</span></span>
 </p>
 </li>
 <li>
@@ -11722,7 +11722,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">犹及史之<a href="#que1">阙</a>文</span>：还见过史书上存疑从缺的地方。&ldquo;阙文&rdquo;与下面的&ldquo;借乘&rdquo;具体何指，后者是否亦为&ldquo;吾犹及&rdquo;的对象，已难确考。</p>
+<span class="lyterm">犹及史之<a href="#que1">阙</a>文</span>：还见过史书上存疑从缺的地方。&ldquo;阙文&rdquo;与下面的&ldquo;借乘&rdquo;具体指什么，后者是不是&ldquo;吾犹及&rdquo;的对象，已难确考。</p>
 </li>
 </ul>
 </div>
@@ -11739,7 +11739,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">忍</span>：容忍、忍耐，或狠心、忍心，都讲得通。<span class="lyseealso"><span>【参】</span><span>《左传》中有很多例证。僖公二十四年（前636年）夏，周襄王<span class="lyq">不忍小忿以弃郑亲</span>，借<a href="#yidihuaxia">狄</a>军讨伐了郑国，同年秋他的异母弟又借狄军叛乱，他被迫去郑国避难，自取其辱。昭公十三年（前529年），楚公子比继位后不愿兄弟相残，<span class="lyq">余不忍也</span>，但<span class="lyq">人将忍子</span>，招致杀身之祸。昭公二十年（前522年），接替<a href="#zichan">子产</a>为郑相的子太叔不忍施行<a href="#mengzheng">猛政</a>，其德能又不足以宽服民，郑国盗贼四起，只好纠之以猛。昭公二十五年（前517年），<a href="#zhaogong">鲁昭公</a>讨伐季氏失败，大夫子家懿伯建议由众臣背黑锅，<span class="lyq">诸臣伪劫君者，而负罪以出</span>，保全昭公的君位，昭公耻之，<span class="lyq">余不忍也</span>，于是弃国流亡。</span></span>
+<span class="lyterm">忍</span>：容忍、忍耐，或狠心、忍心，都讲得通。<span class="lyseealso"><span>【参】</span><span>《左传》中有很多例证。僖公二十四年（前636年）夏，周襄王<span class="lyq">不忍小忿以弃郑亲</span>，借<a href="#yidihuaxia">狄</a>军讨伐了郑国，同年秋他的异母弟又借狄军叛乱，他被迫去郑国避难，自取其辱。昭公十三年（前529年），楚公子比继位后不愿残害兄弟，<span class="lyq">余不忍也</span>，但<span class="lyq">人将忍子</span>，招致杀身之祸。昭公二十年（前522年），接替<a href="#zichan">子产</a>为郑相的子太叔不忍施行<a href="#mengzheng">猛政</a>，其德能又不足以宽服民，郑国盗贼四起，只好纠之以猛。昭公二十五年（前517年），<a href="#zhaogong">鲁昭公</a>讨伐季氏失败，大夫子家懿伯建议由众臣背黑锅，<span class="lyq">诸臣伪劫君者，而负罪以出</span>，保全昭公的君位，昭公耻之，<span class="lyq">余不忍也</span>，于是弃国流亡。</span></span>
 </p>
 </li>
 </ul>
@@ -13540,7 +13540,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">焉能为有？焉能为亡？</span>：指这样的人存在与否（从社会的角度看）无关紧要。<span class="lyseealso"><span>【参】</span><span>清李颙（<span class="lypinyin">y&oacute;ng</span>）《四书反身录》：<span class="lyq">若不宏不毅，则至道不凝，碌碌一生，无补于世。世有此人，如九牛增一毛，不见其益，世无此人，如九牛去一毛，不见其损，何足为轻重乎？&hellip;&hellip;于世无补，虚度待死，与草木何异？</span></span></span>
+<span class="lyterm">焉能为有？焉能为亡？</span>：指这样的人存在与否（从社会的角度看）无关紧要。<span class="lyseealso"><span>【参】</span><span>清代李颙（<span class="lypinyin">y&oacute;ng</span>）《四书反身录》：<span class="lyq">若不宏不毅，则至道不凝，碌碌一生，无补于世。世有此人，如九牛增一毛，不见其益，世无此人，如九牛去一毛，不见其损，何足为轻重乎？&hellip;&hellip;于世无补，虚度待死，与草木何异？</span></span></span>
 </p>
 </li>
 </ul>
@@ -14361,7 +14361,7 @@ img.characterimg {
 <a id="lijiliyun"></a>《礼记&middot;礼运》通过子游与孔子问答的形式，描绘了儒家理想中的<span class="lykeyword">大同</span>社会：<span class="lyq">大道之行也，天下为公，选贤与能，讲信修睦。故人不独亲其亲，不独子其子；使老有所终，壮有所用，幼有所长，矜寡、孤独、废疾者皆有所养；男有分，女有归。货，恶其弃于地也，不必藏于己；力，恶其不出于身也，不必为己。</span>（矜：通&ldquo;鳏&rdquo;（<span class="lypinyin">guān</span>），成年男子无妻或丧妻。）接着指出，在<span class="lyq">天下为家</span>的时代，如能<span class="lyq">礼义以为纪，以正君臣，以笃父子，以睦兄弟，以和夫妇</span>，仍不失为<span class="lykeyword">小康</span>。然后重点论述了礼义对于维系社会的价值：<span class="lyq">故欲恶者，心之大端也。人藏其心，不可测度也。美恶皆在其心，不见其色也，欲一以穷之，舍礼何以哉？&hellip;&hellip;故礼义也者，人之大端也，&hellip;&hellip;故唯圣人为知礼之不可以已也。故坏国、丧家、亡人，必先去其礼。</span>
 </p>
 <p>
-<a id="zizhang"></a><span class="lycharname">子张</span>，<span class="lycharname">师</span>，<span class="lycharname">张</span>：颛（<span class="lypinyin">zhuān</span>）孙师，字子张，鲁国人，少孔子48岁。《论语》诸弟子中数他最年轻，其次是<a href="#zengshen">曾参</a>和<a href="#fanxu">樊须</a>。《韩非子&middot;显学》称，孔子之后儒分八派，&ldquo;子张之儒&rdquo;被排在第一位，超过&ldquo;<a href="#zisi">子思</a>之儒&rdquo;，可惜今已不传。他的祖先是和<a href="#chenchengzi">陈公子完</a>一同逃往齐国的公子颛孙（《左传&middot;庄公二十二年》），后来又到鲁国定居，就以颛孙为氏。传到子张这一代，已经是<span class="lyq">鲁之鄙家</span>了（《吕氏春秋&middot;尊师》），想必有不为人知的坎坷，但他志高求进，心气很足，使年纪相仿的同门感到敬畏。据《史记&middot;儒林列传》，孔子过世后他去了陈国居住，就是不曾忘怀遥远的血脉吧？他去世时<a href="#zengshen">曾参</a>正在服母丧，所以是英年早逝（《礼记&middot;檀弓下》）。病重之时，他把儿子召到身旁，像是自言自语道：<span class="lyq">&ldquo;君子<a href="#yue1a">曰</a>终，小人曰死，吾今日其<a href="#shu4a">庶几</a>乎？&rdquo;</span>（《礼记&middot;檀弓上》。） <a href="#2.18" class="lyref">2.18</a> <a href="#2.23" class="lyref">2.23</a> <a href="#5.19" class="lyref">5.19</a> <a href="#11.16" class="lyref">11.16</a> <a href="#11.18" class="lyref">11.18</a> <a href="#11.20" class="lyref">11.20</a> <a href="#12.6" class="lyref">12.6</a> <a href="#12.10" class="lyref">12.10</a> <a href="#12.14" class="lyref">12.14</a> <a href="#12.20" class="lyref">12.20</a> <a href="#14.40" class="lyref">14.40</a> <a href="#15.6" class="lyref">15.6</a> <a href="#15.42" class="lyref">15.42</a> <a href="#17.6" class="lyref">17.6</a> <a href="#19.1" class="lyref">19.1</a> <a href="#19.2" class="lyref">19.2</a> <a href="#19.3" class="lyref">19.3</a> <a href="#19.15" class="lyref">19.15</a> <a href="#19.16" class="lyref">19.16</a> <a href="#20.2" class="lyref">20.2</a> </p>
+<a id="zizhang"></a><span class="lycharname">子张</span>，<span class="lycharname">师</span>，<span class="lycharname">张</span>：颛（<span class="lypinyin">zhuān</span>）孙师，字子张，鲁国人，少孔子48岁。《论语》诸弟子中数他最年轻，其次是<a href="#zengshen">曾参</a>和<a href="#fanxu">樊须</a>。《韩非子&middot;显学》称，孔子之后儒分八派，&ldquo;子张之儒&rdquo;被排在第一位，超过&ldquo;<a href="#zisi">子思</a>之儒&rdquo;，可惜今已不传。他的祖先是和<a href="#chenchengzi">陈公子完</a>一同逃往齐国的公子颛孙（《左传&middot;庄公二十二年》），后来又到鲁国定居，就以颛孙为氏。传到子张这一代，已经是<span class="lyq">鲁之鄙家</span>了（《吕氏春秋&middot;尊师》），想必有不为人知的艰辛，但他志高求进，心气很足，使年纪相仿的同门感到敬畏。据《史记&middot;儒林列传》，孔子过世后他去了陈国居住，就是不曾忘怀遥远的血脉吧？他去世时<a href="#zengshen">曾参</a>正在服母丧，所以是英年早逝（《礼记&middot;檀弓下》）。病重之时，他把儿子召到身旁，像是自言自语道：<span class="lyq">&ldquo;君子<a href="#yue1a">曰</a>终，小人曰死，吾今日其<a href="#shu4a">庶几</a>乎？&rdquo;</span>（《礼记&middot;檀弓上》。） <a href="#2.18" class="lyref">2.18</a> <a href="#2.23" class="lyref">2.23</a> <a href="#5.19" class="lyref">5.19</a> <a href="#11.16" class="lyref">11.16</a> <a href="#11.18" class="lyref">11.18</a> <a href="#11.20" class="lyref">11.20</a> <a href="#12.6" class="lyref">12.6</a> <a href="#12.10" class="lyref">12.10</a> <a href="#12.14" class="lyref">12.14</a> <a href="#12.20" class="lyref">12.20</a> <a href="#14.40" class="lyref">14.40</a> <a href="#15.6" class="lyref">15.6</a> <a href="#15.42" class="lyref">15.42</a> <a href="#17.6" class="lyref">17.6</a> <a href="#19.1" class="lyref">19.1</a> <a href="#19.2" class="lyref">19.2</a> <a href="#19.3" class="lyref">19.3</a> <a href="#19.15" class="lyref">19.15</a> <a href="#19.16" class="lyref">19.16</a> <a href="#20.2" class="lyref">20.2</a> </p>
 <a id="characters-others"></a>
 <h2>其他</h2>
 <p>以下收录了在不同章中重复出现过，而又不是孔子弟子的人物，也包括季氏、孟氏这样的家族，共36条。</p>
@@ -14676,9 +14676,6 @@ img.characterimg {
 </li>
 <li>
 <p> 电子邮件：<a href="mailto:abolybook@gmail.com" class="lyurladdr" target="_blank">abolybook@gmail.com</a>。内容较多或者不希望公开的想法，可以通过邮件告诉我。</p>
-</li>
-<li>
-<p> 新浪博客：<a href="http://blog.sina.com.cn/abolybook" class="lyurladdr" target="_blank">blog.sina.com.cn/abolybook</a>，微信订阅号：abolybook，主要用来发布更新。</p>
 </li>
 </ul>
 <a id="usage-plan"></a>
