--- a/aboly.html
+++ b/aboly.html
@@ -1142,7 +1142,7 @@ img.characterimg {
 <p>子曰：&ldquo;<a href="#zigong">赐</a>也，始可与言《诗》已矣！告诸往而知来者。&rdquo;</p>
 </div>
 <div class="lyblobannotation">
-<p>《论语》包含很多的孔子师徒问答，本章是第一例，就体现出孔子因人施教的特点，他的回答往往根据提问者的性格、所处环境的不同有所偏重。子贡头脑灵活，口才出众，善于经商，是同门中的首富。</p>
+<p>《论语》包含很多的孔子师徒问答，本章是第一例，就体现出孔子因人施教的特点，他的回答往往根据提问者的性格、所处环境的不同有所偏重。子贡头脑机敏，口才出众，善于经商，是同门中的首富。</p>
 <ul class="lyblobitemize">
 <li>
 <p>
@@ -1168,7 +1168,7 @@ img.characterimg {
 <p> 颂：<a href="#zongmiao">宗庙</a>祭祀诗，又分周、鲁、商颂。</p>
 </li>
 </ul>
-<p>大部分诗篇出自文人之手或经过文人润饰，其中国风的民间色彩较浓。原本所有的诗都配乐可歌，可惜乐谱久已失传。</p>
+<p>大部分诗篇出自文人之手或经过文人润饰，国风的民间色彩较浓。原本所有的诗都配乐可歌，可惜乐谱久已失传。</p>
 <p>《诗经》是陆续集成的，孔子也参与了编选修订。《史记&middot;孔子世家》称：<span class="lyq">古者《诗》三千余篇，及至孔子，去其重，取可施于礼义，&hellip;&hellip;三百五篇孔子皆弦歌之，以求合《<a href="#shaoyue">韶</a>》、《<a href="#wuyue">武</a>》、《雅》、《颂》之音。<a href="#liyue">礼乐</a>自此可得而述，以备<a href="#wangdao">王道</a>，成<a href="#liujing">六艺</a>。</span>程度上或有夸大，但参考 <a href="#9.15" class="lyref">9.15</a> ，仍可想见孔子对于《诗经》思想规范化的重要影响。</p>
 </li>
 <li>
@@ -1710,7 +1710,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">干（<span class="lypinyin">gān</span>）禄</span>：挣公家俸禄，即做官。<a id="gan1"></a><span class="lyterm">干</span>：动词，本义为触犯，冲扰，引申为求取，索求，有行为出格的意味，用作谦卑文雅的说法。<span class="lyexample"><span>【例】</span><span>成语&ldquo;矫情干誉&rdquo;。王安石《宝应二三进士见送乞诗》：<span class="lyq">少喜功名尽坦<a href="#tu2">涂</a>，那知干世最崎岖。</span>（干世：涉世，求用于世。）</span></span>
+<span class="lyterm">干（<span class="lypinyin">gān</span>）禄</span>：挣公家俸禄，即做官。<a id="gan1"></a><span class="lyterm">干</span>：动词，本义为触犯，冲扰，引申为求取，索求，有行为出格的意味，用作谦卑文雅的说法。<span class="lyexample"><span>【例】</span><span>成语&ldquo;矫情干誉&rdquo;（矫：逆，违背）。王安石《宝应二三进士见送乞诗》：<span class="lyq">少喜功名尽坦<a href="#tu2">涂</a>，那知干世最崎岖。</span>（干世：涉世，求用于世。）</span></span>
 </p>
 <p>
 <a id="lu4a"></a><span class="lyterm">禄</span>：官俸，当官挣得的薪金。<span class="lyexample"><span>【例】</span><span>成语&ldquo;高官厚禄&rdquo;。</span></span>
@@ -1830,7 +1830,9 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">友于兄弟，施于有政</span>：关爱自己的兄弟，扩散影响于政治风气。这句话见于《尚书&middot;周书&middot;君陈》（伪），文字略有不同。<span class="lyterm">友</span>：兄弟相敬爱。<a id="you3"></a><span class="lyterm">有</span>：无意义的助词，用于单字名词前。<span class="lyexample"><span>【例】</span><span>《尚书&middot;周书&middot;召诰》：<span class="lyq">有王虽小，<a href="#tianzi">元子</a>哉。</span>（王：指<a href="#chengwang">周成王</a>。）</span></span>
+<span class="lyterm">友于兄弟，施于有政</span>：关爱自己的兄弟，扩散影响于政治风气。这句话见于《尚书&middot;周书&middot;君陈》（伪），文字略有不同。<span class="lyterm">友</span>：兄弟间相亲相爱。</p>
+<p>
+<a id="you3"></a><span class="lyterm">有</span>：无意义的助词，用于单字名词之前，感觉比较郑重或专注。从&ldquo;存在&rdquo;的意思理解，它含有&ldquo;无需明言也众所周知&rdquo;的意味，近似于英语大写的THE，但不必重读。<span class="lyexample"><span>【例】</span><span>《尚书&middot;周书&middot;召诰》：<span class="lyq">有王虽小，<a href="#tianzi">元子</a>哉。</span>（王：指<a href="#chengwang">周成王</a>。）</span></span>
 </p>
 </li>
 <li>
@@ -1995,7 +1997,7 @@ img.characterimg {
 <p>
 <span class="lyterm">三家者以《雍》彻</span>。<span class="lyterm">《雍》</span>见于《诗经&middot;周颂》，是周天子祭祀<a href="#wen">周文王</a>专用的。本章的逻辑承接上一章。<span class="lyterm">彻</span>：通&ldquo;撤&rdquo;，指撤去祭品时唱诵。</p>
 <p>
-<a id="jia1"></a><span class="lyterm">家</span>：<a href="#qingdafushi">卿</a>或大夫的<a href="#yi4c">封邑</a>，又称<span class="lykeyword">采（<span class="lypinyin">c&agrave;i</span>）邑</span>，是从<a href="#tianzi">天子</a>的<a href="#wangji">王畿</a>或<a href="#zhuhou">诸侯</a>的封国中划分的领地，该地百姓的赋税成为受封者的俸禄。扩展而言，当时邦家一体，天子以<a href="#tianxia">天下</a>为家，诸侯以国为家，卿大夫以邑为家。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">有国有家者，不患寡而患不均，不患贫而患不安。</span></span></span><span class="lyseealso"><span>【参】</span><span>《资治通鉴&middot;唐高祖武德九年》（626年）载，唐太宗即位之初，亲自带领侍卫将卒习射，以免<span class="lyq">闲居无事</span>、<span class="lyq">逸游忘战</span>。群臣多有谏阻：&ldquo;<span class="lyq">万一有狂夫<a href="#qie4a">窃</a>发，出于不意，非所以重<a href="#sheji">社稷</a>也。</span>&rdquo;太宗<span class="lyq">曰：&ldquo;王者视<a href="#sihai">四海</a>如一家，封域之内，皆朕赤子，朕一一推心置其腹中，奈何宿卫之士亦加猜忌乎！&rdquo;由是人思自励，数年之间，悉为精锐。</span>（赤子：婴儿，指孩子。）</span></span>
+<a id="jia1"></a><span class="lyterm">家</span>：<a href="#qingdafushi">卿</a>或大夫的<a href="#yi4c">封邑</a>，又称<span class="lykeyword">采（<span class="lypinyin">c&agrave;i</span>）邑</span>，是从<a href="#tianzi">天子</a>的<a href="#wangji">王畿</a>或<a href="#zhuhou">诸侯</a>的封国中划分的领地，该地百姓的赋税成为受封者的俸禄。扩展而言，当时邦家一体，天子以<a href="#tianxia">天下</a>为家，诸侯以国为家，卿大夫以邑为家。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">有国有家者，不患寡而患不均，不患贫而患不安。</span></span></span><span class="lyseealso"><span>【参】</span><span>《资治通鉴&middot;唐高祖武德九年》（626年）载，唐太宗即位之初，亲自带领侍卫将卒习射，以免<span class="lyq">闲居无事</span>、<span class="lyq">逸游忘战</span>。群臣多有谏阻：&ldquo;<span class="lyq">万一有狂夫<a href="#qie4a">窃</a>发，出于不意，非所以重<a href="#sheji">社稷</a>也。</span>&rdquo;太宗<span class="lyq">曰：&ldquo;王者视<a href="#sihai">四海</a>如一家，封域之内，皆朕赤子，朕一一推心置其腹中，奈何宿卫之士亦加猜忌乎！&rdquo;由是人思自励，数年之间，悉为精锐。</span>（赤子：婴儿，这里指孩子。赤指体色。）</span></span>
 </p>
 <p>
 <a id="sanhuan"></a><span class="lyterm">三家</span>：指当时把持鲁国政权的三大权贵家族，<a href="#jishi">季孙氏</a>、<a href="#mengshi">孟孙氏</a>、叔孙氏，他们都是鲁国第15任国君鲁桓公（前711年&mdash;前694年在位）的后代，又称<span class="lykeyword">三桓</span>。桓公的嫡长子为鲁庄公；庶长子庆父的后代为孟孙氏，庶次子叔牙的后代为叔孙氏，<a id="jiyou"></a>嫡次子季友的后代为季孙氏。季孙氏就是季氏，&ldquo;孙&rdquo;不是氏的一部分，仅用于尊称各家宗主，例如<a href="#shusunwushu">叔孙武叔</a>和<a href="#jiziran">季子然</a>的区别。<a id="bozhongshuji"></a><span class="lyseealso"><span>【参】</span><span>古代兄弟姐妹之间的排行，按<span class="lykeyword">伯</span>（或<span class="lykeyword">孟</span>）<span class="lykeyword">仲叔季</span>为序。《左传&middot;隐公元年》孔颖达正义：<span class="lyq">《礼纬》云：&ldquo;庶长称孟&rdquo;，然则嫡妻之子长者称伯，妾子长于妻子，则称为孟，所以别<a href="#zongzhu">嫡庶</a>也。</span></span></span>
@@ -2215,7 +2217,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>南朝宋裴松之补注《三国志》，博采各家，兼以论辩，自成一体。他在《上三国志注表》中，强调素、质之外，绚、文也很重要：<span class="lyq"><a href="#qie4a">窃</a>惟绘事以众色成文，蜜蜂以兼采为味，故能使绚素有<a href="#zhang1">章</a>，甘<a href="#yu2d">逾</a><a href="#ben3">本</a><a href="#zhi4f">质</a>。</span>又见 <a href="#12.8" class="lyref">12.8</a> <a href="#zigong">子贡</a>的话。</span></span>
+<span class="lyseealso"><span>【参】</span><span>南朝宋裴松之补注《三国志》，博采各家，兼有论辩，自成一体。他在《上三国志注表》中，强调素、质之外，绚、文也很重要：<span class="lyq"><a href="#qie4a">窃</a>惟绘事以众色成文，蜜蜂以兼采为味，故能使绚素有<a href="#zhang1">章</a>，甘<a href="#yu2d">逾</a><a href="#ben3">本</a><a href="#zhi4f">质</a>。</span>又见 <a href="#12.8" class="lyref">12.8</a> <a href="#zigong">子贡</a>的话。</span></span>
 </p>
 </div>
 </div>
@@ -9460,9 +9462,13 @@ img.characterimg {
 <li>
 <p>
 <a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，即<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
-<p>汉代尊儒，教化中强调名分地位的意义，&ldquo;以名为教&rdquo;，<a href="#14.26">不出其位</a>，用以维护等级秩序，从魏晋起被称作<span class="lykeyword">名教</span>。超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a>越</span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cu&agrave;n</span>），名实不符之物称为<span class="lykeyword">伪</span>，都是很忌讳的。<span class="lyseealso"><span>【参】</span><span>《日知录&middot;卷十三&middot;名教》：<span class="lyq">《南史》有云：&ldquo;汉世士务修身，故忠孝成俗；至于乘轩服冕，非此莫由。晋、宋以来，风衰义缺。&rdquo;故昔人之言曰名教，曰名节，曰功名，不能使天下之人以义为利，而犹使之以名为利；虽非纯<a href="#wangdao">王</a>之风，<a href="#yi4d">亦</a>可以救积洿之俗矣。&hellip;&hellip;故名胜于利，则小人之道消；利胜于名，则贪暴之风扇。&hellip;&hellip;人不爱名，则圣人之<a href="#quan2">权</a>去矣。</span>（轩：大夫及以上所乘的车。乘轩服<a href="#mian3">冕</a>：指做大官，飞黄腾达。洿：通&ldquo;污&rdquo;。扇（<span class="lypinyin">shān</span>）：兴。）</span></span>
+<p>汉代尊儒，教化中强调名分地位的意义，&ldquo;以名为教&rdquo;，<a href="#14.26">不出其位</a>，用以维护等级秩序，从魏晋起被称作<span class="lykeyword">名教</span>。超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cu&agrave;n</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
+<div class="lyseealso">
+<p>
+<span>【参】</span><span>《日知录&middot;卷十三&middot;名教》：<span class="lyq">《南史》有云：&ldquo;汉世士务修身，故忠孝成俗；至于乘轩服冕，非此莫由。晋、宋以来，风衰义缺。&rdquo;故昔人之言曰名教，曰名节，曰功名，不能使天下之人以义为利，而犹使之以名为利；虽非纯<a href="#wangdao">王</a>之风，<a href="#yi4d">亦</a>可以救积洿之俗矣。&hellip;&hellip;故名胜于利，则小人之道消；利胜于名，则贪暴之风扇。&hellip;&hellip;人不爱名，则圣人之<a href="#quan2">权</a>去矣。</span>（轩：大夫及以上所乘的车。乘轩服<a href="#mian3">冕</a>：指做大官，飞黄腾达。洿：通&ldquo;污&rdquo;。扇（<span class="lypinyin">shān</span>）：兴。）</span>
 </p>
 <p>《孔子家语》首篇《相鲁》开头，记述了孔子<a href="#qirenkuinvyue">初登政坛</a>的举措：<span class="lyq">孔子初仕，为中都宰。制为养生送死之节，长幼异食，强弱异任，男女别<a href="#tu2">涂</a>，路无拾遗，器不雕伪。为四寸之棺，五寸之<a href="#guo3">椁</a>，因丘陵为坟，不封不树。行之一年，而四方之诸侯<a href="#ze2">则</a>焉。</span>（不封不树：不积土起坟，不植树为念，指丧礼从简。）</p>
+</div>
 </li>
 <li>
 <p>
@@ -9532,12 +9538,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">专对</span>：指独立处理（外交）事务。这勾画了一个书呆子的形象。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第8卷第12章是善于专对的例子：<span class="lyq"><a href="#qijinggong">齐景公</a>使使于楚，楚王与之上九重之台，顾使者曰：&ldquo;齐亦有台若此者乎？&rdquo;使者曰：&ldquo;吾君有治位之堂，土阶三等，茅茨不翦，采椽不斫，犹以谓为之者劳，居之者泰。吾君<a href="#wu1">恶</a>有台若此者乎？&rdquo;于是楚王盖悒如也。</span>（茅茨（<span class="lypinyin">c&iacute;</span>）：茅草做的屋顶盖。翦（<span class="lypinyin">jiǎn</span>）：通&ldquo;剪&rdquo;。采椽：柞木做的椽子。&ldquo;茅茨不翦，采椽不斫&rdquo;是《韩非子&middot;五<a href="#du4">蠹</a>》形容<a href="#yao">尧帝</a>生活简朴的话。悒（<span class="lypinyin">y&igrave;</span>）：忧愁不安。）</span></span>
+<span class="lyterm">专对</span>：指独立处理（外交）事务。这句话勾勒了一个书呆子的形象。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第8卷第12章是善于专对的例子：<span class="lyq"><a href="#qijinggong">齐景公</a>使使于楚，楚王与之上九重之台，顾使者曰：&ldquo;齐亦有台若此者乎？&rdquo;使者曰：&ldquo;吾君有治位之堂，土阶三等，茅茨不翦，采椽不斫，犹以谓为之者劳，居之者泰。吾君<a href="#wu1">恶</a>有台若此者乎？&rdquo;于是楚王盖悒如也。</span>（茅茨（<span class="lypinyin">c&iacute;</span>）：茅草做的屋顶盖。翦（<span class="lypinyin">jiǎn</span>）：通&ldquo;剪&rdquo;。采椽：柞木做的椽子。&ldquo;茅茨不翦，采椽不斫&rdquo;是《韩非子&middot;五<a href="#du4">蠹</a>》形容<a href="#yao">尧帝</a>生活简朴的话。悒（<span class="lypinyin">y&igrave;</span>）：忧愁不安。）</span></span>
 </p>
 </li>
 <li>
 <p>
-<span class="lyterm">多</span>：指书读得多，诗背得全。</p>
+<span class="lyterm">多</span>：指书读得多，<a href="#shijing">诗</a>背得全。</p>
 </li>
 </ul>
 </div>
@@ -13285,8 +13291,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">津</span>：渡口。后面的<span class="lyterm">知津</span>一语双关，暗指以孔子之智，当然清楚在当时仁礼之道并不可行，只是他不肯接受而已。后来&ldquo;问津&rdquo;引申为寻访，探求。<span class="lyexample"><span>【例】</span><span>陶潜《桃花源记》：<span class="lyq">后遂无问津者。</span></span></span>
-</p>
+<span class="lyterm">津</span>：渡口。后面的<span class="lyterm">知津</span>一语双关，暗指以孔子之智，应该清楚在当时仁礼之道并不可行，只是他不肯接受而已。后来&ldquo;问津&rdquo;引申为寻访，探求，熟语&ldquo;指点迷津&rdquo;表示为人指明正确可行的方向、途径。</p>
 </li>
 <li>
 <p>
@@ -14821,9 +14826,9 @@ img.characterimg {
 <p>
 <span class="lybook">《孟子译注》</span>，杨伯峻编著，中华书局，1960年。</p>
 <p>
-<span class="lybook">《韩诗外传译注》</span>，〔西汉〕韩婴编著，魏达纯译注，东北师范大学出版社，1993年。</p>
+<span class="lybook">《韩诗外传笺疏》</span>，屈守元著，巴蜀书社，2012年。</p>
 <p>
-<span class="lybook">《韩诗外传今注今译》</span>，赖炎元注译，台湾商务印书馆，古籍今注今译丛书，1972年。</p>
+<span class="lybook">《韩诗外传译注》</span>，〔西汉〕韩婴编著，魏达纯译注，东北师范大学出版社，1993年。</p>
 <p>
 <span class="lybook">《老子&middot;庄子&middot;列子》</span>，张震点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p>
