--- a/ly.html
+++ b/ly.html
@@ -2866,7 +2866,7 @@ a:link {
 <a href="aboly#11.4">11.4</a>
 </div>
 <div class="lytext">
-<p>子曰：&ldquo;回也非助我者也！于吾言无所不说。&rdquo;</p>
+<p>子曰：&ldquo;回也非助我者也，于吾言无所不说。&rdquo;</p>
 </div>
 </div>
 <a id="11.5"></a>
