--- a/aboly.html
+++ b/aboly.html
@@ -2776,7 +2776,9 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">知</span>（<span class="lypinyin">zh&igrave;</span>）：通&ldquo;智&rdquo;，有智慧。<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）</span></span>
+<span class="lyterm">知</span>（<span class="lypinyin">zh&igrave;</span>）：通&ldquo;智&rdquo;，有智慧。</p>
+<p>
+<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>如果跳出&ldquo;里&rdquo;的环境，择友、择业等等，也都是这个道理。《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）英文<a href="http://heptagrama.com/quotes-thoughts-62.htm" class="lyurl" target="_blank">谚语</a>的建议更直白：<span class="lyqe">Surround yourself with people who make you a better person.</span>甚至<a href="http://www.jimrohn.com/" class="lyurl" target="_blank">Jim John</a>武断地说：<span class="lyqe">You are the average of the five people you spend the most time with.</span> 反过来想可能就容易认同：一直stand out是很累的；环境和时间会磨平棱角。</span></span>
 </p>
 </li>
 </ul>
@@ -4226,7 +4228,7 @@ img.characterimg {
 <p>
 <a id="su4a"></a><span class="lyterm">粟</span>（<span class="lypinyin">s&ugrave;</span>）：谷粒（舂去皮后就成为小米），泛指粮食。当时虽已出现了金属货币，谷物和布帛仍可作为一般等价物使用，既能交换其它物品，也可以直接消费。</p>
 <p>
-<span class="lyterm">请粟</span>就是申请生活费。孔子生活比较宽裕的阶段，一为前501年起3年多的<a href="#qirenkuinvyue">仕鲁</a>时期，一为前484年<a href="#jikangzi">返鲁</a>直到去世的5年间。公西华是孔子晚年招收的学生，本章发生在返鲁之后。</p>
+<span class="lyterm">请粟</span>就是申请生活费（救助）。孔子生活比较宽裕的阶段，一为前501年起3年多的<a href="#qirenkuinvyue">仕鲁</a>时期，一为前484年<a href="#jikangzi">返鲁</a>直到去世的5年间。公西华是孔子晚年招收的学生，本章发生在返鲁之后。</p>
 </li>
 <li>
 <p>
@@ -5397,7 +5399,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li>
-<p> 孔子没有直接说<span class="lyterm">生而知之者</span>是否存在，只是坦言自己并不是，学问和修养都是靠踏实努力习得的。他对&ldquo;殆有天授&rdquo;者表示过<a href="#16.9">赞赏</a>，或许只是谨慎的虚设，可以和下一章连起来理解。而在<a href="#9.6">弟子眼中</a>，他就是天纵之才。<span class="lyseealso"><span>【参】</span><span><a href="#5.28" class="lyref">5.28</a> <a href="#7.28" class="lyref">7.28</a> 。阿尔伯特&middot;爱因斯坦（Albert Einstein，1879&mdash;1955）：<span class="lyqe">It's not that I'm so smart, it's just that I stay with problems longer.</span></span></span>
+<p> 孔子没有直接断言<span class="lyterm">生而知之者</span>存在与否，只是坦言自己并不是，知识修养都要靠积极勤奋的学习探求。他在 <a href="#16.9" class="lyref">16.9</a>  对&ldquo;生而知之者&rdquo;表示过赞赏，也许只是谨慎的虚设，可以和下一章连起来理解。而在 <a href="#9.6" class="lyref">9.6</a>  弟子眼中，他就是天纵之才。<span class="lyseealso"><span>【参】</span><span><a href="#5.28" class="lyref">5.28</a> <a href="#7.28" class="lyref">7.28</a> 。阿尔伯特&middot;爱因斯坦（Albert Einstein，1879&mdash;1955）：<span class="lyqe">It's not that I'm so smart, it's just that I stay with problems longer.</span>思考：&ldquo;生而知之&rdquo;和&ldquo;早慧&rdquo;有什么区别？哪种更罕见？</span></span>
 </p>
 </li>
 </ul>
@@ -6008,7 +6010,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="yousi"></a><span class="lyterm">有司</span>：泛指负责相关职务的下级官员，品级低于<a href="#qingdafushi">士</a>，具体职务需要从上下文判断。<span class="lyterm">司</span>：掌管，负责。<span class="lyexample"><span>【例】</span><span>《史记&middot;廉颇蔺相如列传》：<span class="lyq">召有司案图，指从此以往十五都予赵。</span></span></span>思考：&ldquo;有司&rdquo;和现代汉语的&ldquo;有关负责人&rdquo;，在含义和用法上有什么异同？</p>
+<a id="yousi"></a><span class="lyterm">有司</span>：泛指负责相关职务的下级官员，品级低于<a href="#qingdafushi">士</a>，具体职务需要从上下文判断。<span class="lyterm">司</span>：掌管，负责。<span class="lyexample"><span>【例】</span><span>《史记&middot;廉颇蔺相如列传》：<span class="lyq">召有司案图，指从此以往十五都予赵。</span>思考：&ldquo;有司&rdquo;和现代汉语的&ldquo;有关负责人&rdquo;，在含义和用法上有什么异同？</span></span>
+</p>
 </li>
 </ul>
 </div>
@@ -11731,7 +11734,8 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">犹及史之<a href="#que1">阙</a>文</span>：还见过史书上存疑从缺的地方。意思是，<a href="#mianyujinzhishi">今之世</a>的史书已在任意修改了。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;艺文志》颜师古注：<span class="lyq">谓文字有疑，则当阙而不说。孔子自言：我初涉学，尚见阙文，今则皆无，任意改作也。</span></span></span>思考：&ldquo;史之阙文&rdquo;与现代新闻报刊的&ldquo;开天窗&rdquo;，有什么异同？</p>
+<span class="lyterm">犹及史之<a href="#que1">阙</a>文</span>：还见过史书上存疑从缺的地方。意思是，<a href="#mianyujinzhishi">今之世</a>的史书已在任意修改了。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;艺文志》颜师古注：<span class="lyq">谓文字有疑，则当阙而不说。孔子自言：我初涉学，尚见阙文，今则皆无，任意改作也。</span>思考：&ldquo;史之阙文&rdquo;与现代新闻报刊的&ldquo;开天窗&rdquo;，有什么异同？</span></span>
+</p>
 <p>后面的&ldquo;借乘&rdquo;具体指什么，是不是&ldquo;吾犹及&rdquo;的对象，已难确考。</p>
 </li>
 </ul>
